syntax="proto3";

package auth_service;

service AuthService {
    rpc StaffLogin(StaffLoginRequest) returns (AuthResponse){}
    rpc StaffSignUp(StaffSignUpRequest) returns (AuthResponse){}
    rpc StaffResetPassword(StaffResetPasswordRequest) returns (Empty){}

    // Customer
    rpc CustomerSignUp(CreateCustomerRequest) returns (CreateCustomerResponse) {}
    rpc CustomerLogin(CustLoginRequest) returns (CreateCustomerResponse){}
}

message Empty {}

message AuthResponse {
    string id = 1;
    string role = 2;
    string branchId = 3;
}

message StaffLoginRequest {
    string username = 1;
    string password = 2;
    string phoneNumber = 3;
}

message StaffSignUpRequest {
    string name = 1;
    string username = 2;
    string password = 3;
    string phoneNumber = 4;
    string role = 5;
    string branchId = 6;
}

message StaffResetPasswordRequest {
    string staffID = 1;
    string newPassword = 2;
}

message CreateCustomerRequest{
    string phoneNumber = 1;
    string name = 2;
    string email = 3;
    string photo = 4;
    string language = 5;
    int64  birthdate = 6;
    string sex = 7;
    string socialId = 8;
    DeviceInfo deviceInfo = 9;
}

message DeviceInfo{
    string deviceId = 1;
    string deviceName = 2;
    string notificationId = 3;
}

message CreateCustomerResponse {
    string id = 1;
    string name = 2;
    string photo = 3;
    string email = 4;
    bool isExist = 5;
}

message CustLoginRequest {
    oneof by {
        string phoneNumber = 1;
        string email = 2;
    }
    DeviceInfo device = 3;
}